--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "flatarr",
   "version": "1.0.0",
-  "description": "",
+  "description": "Utility to flat arrays with nested arrays into a single array.",
   "main": "index.js",
   "scripts": {
     "test": "npm run lint & npm run unit",
@@ -19,5 +19,16 @@
     "eslint": "^3.17.1",
     "git-hooks": "^1.1.8",
     "mocha": "^3.2.0"
-  }
+  },
+  "directories": {
+    "test": "test"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/svitlanaiefremova/flatarr.git"
+  },
+  "bugs": {
+    "url": "https://github.com/svitlanaiefremova/flatarr/issues"
+  },
+  "homepage": "https://github.com/svitlanaiefremova/flatarr#readme"
 }
